# deribit-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: 18_45-15_01_2026_init.py  2026_01_16_create_currency_prices_table.py
scripts/: celery_entrypoint.sh  entrypoint.sh
src/: main.py
src/api/v1/: router.py  schemas.py
src/core/: config.py  init_di.py  ioc.py
src/db/: models.py  repository.py  session.py  wait_db.py
src/services/: deribit_service.py
src/workers/: celery_app.py  tasks.py
tests/: conftest.py  test_api.py  test_deribit_service.py  test_repository.py
